--- a/index.html
+++ b/index.html
@@ -9,41 +9,155 @@
 </head>
 <body>
 
-  <!-- Static Background -->
   <div class="background"></div>
 
-  <!-- Profile Section (Placeholder) -->
-  <section class="profile-section">
-    <div class="profile-placeholder">[Profile Image + Namebox]</div>
+  <!-- Profile -->
+  <section class="profile-section section-container">
+    <img src="profile.jpg" alt="Profile Photo" />
+    <div class="profile-text">
+      <div class="name">Name Surname</div>
+      <div class="description">
+        I am a passionate and dedicated software developer with a strong foundation in JavaScript and React.
+      </div>
+    </div>
   </section>
 
-  <!-- Proficiency Section (Placeholder) -->
-  <section class="proficiency-section">
-    <div class="placeholder-box">[Proficiency Section]</div>
+  <!-- Proficiency -->
+  <section class="proficiency-box section-container">
+    <div class="proficiency-label">Beginner Intermediate Advance</div>
+
+    <div class="proficiency-label">JavaScript</div>
+    <div class="proficiency-bar"><span style="width: 85%;"></span></div>
+
+    <div class="proficiency-label">React</div>
+    <div class="proficiency-bar"><span style="width: 70%;"></span></div>
+
+    <div class="proficiency-label">Node.js</div>
+    <div class="proficiency-bar"><span style="width: 60%;"></span></div>
+
+    <div class="proficiency-label">HTML + CSS</div>
+    <div class="proficiency-bar"><span style="width: 90%;"></span></div>
   </section>
 
-  <!-- Skills Section (Placeholder) -->
-  <section class="skills-section">
-    <div class="placeholder-box">[Skills Section]</div>
+  <!-- Skills -->
+  <section class="skills-box section-container">
+    <span class="skill-tag">Software Development</span>
+    <span class="skill-tag">Agile</span>
+    <span class="skill-tag">UI Design</span>
+    <span class="skill-tag">Problem Solving</span>
+    <span class="skill-tag">Git And Version Control</span>
+    <span class="skill-tag">Web Development</span>
+    <span class="skill-tag">Team Collaboration</span>
+    <span class="skill-tag">Functional Programming</span>
+    <span class="skill-tag">RESTful APIs</span>
   </section>
 
-  <!-- Projects Section (Placeholder) -->
-  <section class="projects-section">
-    <div class="placeholder-box">[Projects Section]</div>
+  <!-- Projects -->
+  <section class="projects-box section-container">
+    <div class="project-card highlight">
+      <div class="project-year">
+        <span>2025</span>
+        <span>❤️</span>
+      </div>
+      <div class="project-title">Portfolio Website</div>
+      <div class="project-tech">Technologies: React, JavaScript, HTML, CSS</div>
+      <div class="project-description">
+        Brief: Developed a personal portfolio website to showcase projects and skills.
+      </div>
+      <div class="project-description">
+        Responsibilities: Designed layout, responsiveness and accessibility.
+      </div>
+    </div>
+
+    <div class="project-card">
+      <div class="project-year">2024</div>
+      <div class="project-title">Agile Board</div>
+      <div class="project-tech">Technologies: JavaScript, HTML, CSS</div>
+      <div class="project-description">
+        Brief: Created a task management tool for organizing and tracking tasks.
+      </div>
+      <div class="project-description">
+        Responsibilities: Built drag and drop functionality, task user interface, and user authorization.
+      </div>
+    </div>
+
+    <div class="project-card">
+      <div class="project-year">2024</div>
+      <div class="project-title">Podcast App</div>
+      <div class="project-tech">Technologies: React, Tailwind, HTML, CSS</div>
+      <div class="project-description">
+        Brief: Developed a podcast application that allows users to search, subscribe, and listen to various podcasts.
+      </div>
+      <div class="project-description">
+        Responsibilities: Implemented search functionality, an audio player with playback controls and integrated backend API for fetching podcast data.
+      </div>
+    </div>
+
+    <div class="project-card">
+      <div class="project-year">2026</div>
+      <div class="project-title">Super Cool Project</div>
+      <div class="project-tech">Technologies: React, Tailwind, HTML, CSS</div>
+      <div class="project-description">
+        Brief: Developed an incredible application that allows users to do amazing things.
+      </div>
+      <div class="project-description">
+        Responsibilities: Implemented complex functions, user-friendly user interfaces and responsive design. Built out additional features specific to the client’s needs.
+      </div>
+    </div>
   </section>
 
-  <!-- Education Section (Placeholder) -->
-  <section class="education-section">
-    <div class="placeholder-box">[Education Section]</div>
+  <section class="education-section section-container">
+    <div class="education-box">
+      <h2 class="section-title">Education</h2>
+
+      <div class="education-card education-1">
+        <div class="edu-row">
+          <div class="edu-meta">
+            <span class="edu-date">Aug. 2023 - Mar. 2024</span>
+            <div class="edu-role">Software Development</div>
+            <div class="edu-company">CodeSpace Academy | Full-time</div>
+          </div>
+          <span class="most-recent-badge">most recent</span>
+        </div>
+        <ul class="edu-points white">
+          <li>Focused on front-end and JavaScript, building interactive, dynamic web applications</li>
+          <li>Developed proficiency in Git and GitHub for version control practices, refining collaborative workflows</li>
+          <li>Gained hands-on experience with building responsive web interfaces and UI/UX development skills</li>
+        </ul>
+      </div>
+
+      <div class="education-card education-2">
+        <div class="edu-meta">
+          <span class="edu-date dark">Feb. 2019 - Dec. 2022</span>
+          <div class="edu-role dark">Electronic Engineering | Full-time</div>
+          <div class="edu-company dark">CPUT</div>
+        </div>
+        <ul class="edu-points dark">
+          <li>Gained a strong foundation in electronic circuits and digital design principles</li>
+          <li>Engaged in hands-on circuit and project development, from concept to functional prototypes</li>
+          <li>Collaborated with cross-functional teams to achieve project goals in a fast-paced environment</li>
+        </ul>
+      </div>
+
+      <div class="education-card education-3">
+        <div class="edu-meta">
+          <span class="edu-date dark">Jan. 2018 - Dec. 2019</span>
+          <div class="edu-role dark">High School Diploma</div>
+          <div class="edu-company dark">Hudson Park High</div>
+        </div>
+        <ul class="edu-points dark">
+          <li>Built core academic skills and developed a strong passion for problem-solving</li>
+          <li>Participated in various extra-curricular projects that honed creative and analytical thinking</li>
+        </ul>
+      </div>
+    </div>
   </section>
 
-  <!-- Tools Section -->
-<section class="tools-section">
+  <section class="tools-section section-container">
   <div class="tools-box">
-    <h2 class="tools-title">Tools</h2>
+    <h2 class="section-title">Tools</h2>
 
     <div class="tools-grid">
-      <!-- Design Card -->
       <div class="tool-card">
         <div class="tool-tag">Design</div>
         <div class="tool-icons">
@@ -53,7 +167,6 @@
         </div>
       </div>
 
-      <!-- Software Card -->
       <div class="tool-card">
         <div class="tool-tag">Software</div>
         <div class="tool-icons">
@@ -63,7 +176,6 @@
         </div>
       </div>
 
-      <!-- Languages Card -->
       <div class="tool-card">
         <div class="tool-tag">Languages</div>
         <div class="tool-icons">
@@ -76,12 +188,10 @@
   </div>
 </section>
 
-  <!-- Experience Section -->
-  <section class="experience-section">
+  <section class="experience-section section-container">
     <div class="experience-box">
-      <h2 class="experience-title">Experience</h2>
+      <h2 class="section-title">Experience</h2>
 
-      <!-- Job 1 -->
       <div class="job-card job-1">
         <div class="job-row">
           <div class="job-meta">
@@ -98,7 +208,6 @@
         </ul>
       </div>
 
-      <!-- Job 2 -->
       <div class="job-card job-2">
         <div class="job-meta">
           <span class="job-date dark">Jan. 2023 - Jul. 2024</span>
@@ -112,7 +221,6 @@
         </ul>
       </div>
 
-      <!-- Job 3 -->
       <div class="job-card job-3">
         <div class="job-meta">
           <span class="job-date dark">Feb. 2021 - Dec. 2022</span>
@@ -128,7 +236,6 @@
     </div>
   </section>
 
-  <!-- Contact Section -->
   <section class="contact-section">
     <div class="contact-container">
       <p class="contact-title">Let’s chat! I’m ready to work on exciting projects.</p>
