Complete responsive redesign of portfolio site
- Rewrote sections of CSS for a custom, mobile-first, card-based layout with improved spacing, color palette, and visual hierarchy
- Refactored HTML structure for all sections (profile, proficiency, skills, projects, education, tools, experience, contact) for clarity and maintainability
- Ensured consistent class naming and semantic markup for accessibility and SEO
- Enhanced project, education, and experience cards for better readability and modern appearance
- Added responsive grid and flex layouts for seamless mobile and desktop viewing

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Portfolio</title>
+  <title>Phillip Botha Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="styles.css" />
 </head>
@@ -13,9 +13,9 @@
 
   <!-- Profile -->
   <section class="profile-section section-container">
-    <img src="profile.jpg" alt="Profile Photo" />
+    <img src="images/image.png" alt="Profile Photo" />
     <div class="profile-text">
-      <div class="name">Name Surname</div>
+      <div class="name">Phillip Botha</div>
       <div class="description">
         I am a passionate and dedicated software developer with a strong foundation in JavaScript and React.
       </div>
@@ -24,19 +24,19 @@
 
   <!-- Proficiency -->
   <section class="proficiency-box section-container">
-    <div class="proficiency-label">Beginner Intermediate Advance</div>
+    <div class="proficiency-label">Beginner</div>
 
     <div class="proficiency-label">JavaScript</div>
-    <div class="proficiency-bar"><span style="width: 85%;"></span></div>
+    <div class="proficiency-bar"><span style="width: 90%;"></span></div>
 
     <div class="proficiency-label">React</div>
-    <div class="proficiency-bar"><span style="width: 70%;"></span></div>
+    <div class="proficiency-bar"><span style="width: 75%;"></span></div>
 
     <div class="proficiency-label">Node.js</div>
     <div class="proficiency-bar"><span style="width: 60%;"></span></div>
 
     <div class="proficiency-label">HTML + CSS</div>
-    <div class="proficiency-bar"><span style="width: 90%;"></span></div>
+    <div class="proficiency-bar"><span style="width: 80%;"></span></div>
   </section>
 
   <!-- Skills -->
@@ -54,98 +54,93 @@
 
   <!-- Projects -->
   <section class="projects-box section-container">
-    <div class="project-card highlight">
-      <div class="project-year">
-        <span>2025</span>
-        <span>❤️</span>
+    <h2 class="section-title">Projects</h2>
+    <div class="projects-grid">
+      <div class="project-card project-card--highlight">
+        <div class="project-top">
+          <span>2025</span>
+          <span class="accent-color">❤️</span>
+        </div>
+        <strong class="project-title">Portfolio Website</strong>
+        <div class="project-description"><b>Brief:</b> Developed a personal portfolio website to showcase projects and skills.</div>
+        <div class="project-tech"><b>Technologies:</b> React, JavaScript, HTML, CSS</div>
+        <div class="project-description"><b>Responsibilities:</b> Designed layout, responsiveness and accessibility.</div>
       </div>
-      <div class="project-title">Portfolio Website</div>
-      <div class="project-tech">Technologies: React, JavaScript, HTML, CSS</div>
-      <div class="project-description">
-        Brief: Developed a personal portfolio website to showcase projects and skills.
-      </div>
-      <div class="project-description">
-        Responsibilities: Designed layout, responsiveness and accessibility.
-      </div>
-    </div>
 
-    <div class="project-card">
-      <div class="project-year">2024</div>
-      <div class="project-title">Agile Board</div>
-      <div class="project-tech">Technologies: JavaScript, HTML, CSS</div>
-      <div class="project-description">
-        Brief: Created a task management tool for organizing and tracking tasks.
+      <div class="project-card">
+        <div class="project-top">
+          <span>2024</span>
+        </div>
+        <strong class="project-title">Agile Board</strong>
+        <div class="project-description"><b>Brief:</b> Created a task management tool for organizing and tracking tasks.</div>
+        <div class="project-tech"><b>Technologies:</b> JavaScript, HTML, CSS</div>
+        <div class="project-description"><b>Responsibilities:</b> Built drag and drop functionality, task user interface, and user authorization.</div>
       </div>
-      <div class="project-description">
-        Responsibilities: Built drag and drop functionality, task user interface, and user authorization.
-      </div>
-    </div>
 
-    <div class="project-card">
-      <div class="project-year">2024</div>
-      <div class="project-title">Podcast App</div>
-      <div class="project-tech">Technologies: React, Tailwind, HTML, CSS</div>
-      <div class="project-description">
-        Brief: Developed a podcast application that allows users to search, subscribe, and listen to various podcasts.
+      <div class="project-card">
+        <div class="project-top">
+          <span>2024</span>
+        </div>
+        <strong class="project-title">Podcast App</strong>
+        <div class="project-description"><b>Brief:</b> Developed a podcast application that allows users to search, subscribe, and listen to various podcasts.</div>
+        <div class="project-tech"><b>Technologies:</b> React, Tailwind, HTML, CSS</div>
+        <div class="project-description"><b>Responsibilities:</b> Implemented search functionality, an audio player with playback controls and integrated backend API for fetching podcast data.</div>
       </div>
-      <div class="project-description">
-        Responsibilities: Implemented search functionality, an audio player with playback controls and integrated backend API for fetching podcast data.
-      </div>
-    </div>
 
-    <div class="project-card">
-      <div class="project-year">2026</div>
-      <div class="project-title">Super Cool Project</div>
-      <div class="project-tech">Technologies: React, Tailwind, HTML, CSS</div>
-      <div class="project-description">
-        Brief: Developed an incredible application that allows users to do amazing things.
-      </div>
-      <div class="project-description">
-        Responsibilities: Implemented complex functions, user-friendly user interfaces and responsive design. Built out additional features specific to the client’s needs.
+      <div class="project-card">
+        <div class="project-top">
+          <span>2026</span>
+        </div>
+        <strong class="project-title">Super Cool Project</strong>
+        <div class="project-description"><b>Brief:</b> Developed an incredible application that allows users to do amazing things.</div>
+        <div class="project-tech"><b>Technologies:</b> React, Tailwind, HTML, CSS</div>
+        <div class="project-description"><b>Responsibilities:</b> Implemented complex functions, user-friendly user interfaces and responsive design. Built out additional features specific to the client’s needs.</div>
       </div>
     </div>
   </section>
 
+  <!-- Education -->
   <section class="education-section section-container">
     <div class="education-box">
       <h2 class="section-title">Education</h2>
 
-      <div class="education-card education-1">
-        <div class="edu-row">
-          <div class="edu-meta">
-            <span class="edu-date">Aug. 2023 - Mar. 2024</span>
-            <div class="edu-role">Software Development</div>
-            <div class="edu-company">CodeSpace Academy | Full-time</div>
-          </div>
+      <div class="education-card highlight">
+        <div class="education-header">
+          <span class="education-institution">CodeSpace Academy | Full-time</span>
           <span class="most-recent-badge">most recent</span>
         </div>
-        <ul class="edu-points white">
+        <div class="education-details">
+          <span>Aug. 2023 - Mar. 2024</span> — <b>Software Development</b>
+        </div>
+        <ul class="education-details">
           <li>Focused on front-end and JavaScript, building interactive, dynamic web applications</li>
           <li>Developed proficiency in Git and GitHub for version control practices, refining collaborative workflows</li>
           <li>Gained hands-on experience with building responsive web interfaces and UI/UX development skills</li>
         </ul>
       </div>
 
-      <div class="education-card education-2">
-        <div class="edu-meta">
-          <span class="edu-date dark">Feb. 2019 - Dec. 2022</span>
-          <div class="edu-role dark">Electronic Engineering | Full-time</div>
-          <div class="edu-company dark">CPUT</div>
+      <div class="education-card">
+        <div class="education-header">
+          <span class="education-institution">CPUT</span>
         </div>
-        <ul class="edu-points dark">
+        <div class="education-details">
+          <span>Feb. 2019 - Dec. 2022</span> — <b>Electronic Engineering | Full-time</b>
+        </div>
+        <ul class="education-details">
           <li>Gained a strong foundation in electronic circuits and digital design principles</li>
           <li>Engaged in hands-on circuit and project development, from concept to functional prototypes</li>
           <li>Collaborated with cross-functional teams to achieve project goals in a fast-paced environment</li>
         </ul>
       </div>
 
-      <div class="education-card education-3">
-        <div class="edu-meta">
-          <span class="edu-date dark">Jan. 2018 - Dec. 2019</span>
-          <div class="edu-role dark">High School Diploma</div>
-          <div class="edu-company dark">Hudson Park High</div>
+      <div class="education-card">
+        <div class="education-header">
+          <span class="education-institution">Hudson Park High</span>
         </div>
-        <ul class="edu-points dark">
+        <div class="education-details">
+          <span>Jan. 2018 - Dec. 2019</span> — <b>High School Diploma</b>
+        </div>
+        <ul class="education-details">
           <li>Built core academic skills and developed a strong passion for problem-solving</li>
           <li>Participated in various extra-curricular projects that honed creative and analytical thinking</li>
         </ul>
@@ -153,41 +148,40 @@
     </div>
   </section>
 
+  <!-- Tools -->
   <section class="tools-section section-container">
-  <div class="tools-box">
-    <h2 class="section-title">Tools</h2>
-
-    <div class="tools-grid">
-      <div class="tool-card">
-        <div class="tool-tag">Design</div>
-        <div class="tool-icons">
-          <img src="icons/figma.png" alt="Figma" />
-          <img src="icons/canva.png" alt="Canva" />
-          <img src="icons/photoshop.png" alt="Photoshop" />
+    <div class="tools-box">
+      <h2 class="section-title">Tools</h2>
+      <div class="tools-grid">
+        <div class="tool-card">
+          <div class="tool-tag">Design</div>
+          <div class="tool-icons">
+            <img src="icons/figma.png" alt="Figma" />
+            <img src="icons/canva.png" alt="Canva" />
+            <img src="icons/photoshop.png" alt="Photoshop" />
+          </div>
         </div>
-      </div>
-
-      <div class="tool-card">
-        <div class="tool-tag">Software</div>
-        <div class="tool-icons">
-          <img src="icons/npm.png" alt="npm" />
-          <img src="icons/vscode.png" alt="VS Code" />
-          <img src="icons/github.png" alt="GitHub" />
+        <div class="tool-card">
+          <div class="tool-tag">Software</div>
+          <div class="tool-icons">
+            <img src="icons/npm.png" alt="npm" />
+            <img src="icons/vscode.png" alt="VS Code" />
+            <img src="icons/github.png" alt="GitHub" />
+          </div>
         </div>
-      </div>
-
-      <div class="tool-card">
-        <div class="tool-tag">Languages</div>
-        <div class="tool-icons">
-          <img src="icons/html.png" alt="HTML" />
-          <img src="icons/css.png" alt="CSS" />
-          <img src="icons/js.png" alt="JavaScript" />
+        <div class="tool-card">
+          <div class="tool-tag">Languages</div>
+          <div class="tool-icons">
+            <img src="icons/html.png" alt="HTML" />
+            <img src="icons/css.png" alt="CSS" />
+            <img src="icons/js.png" alt="JavaScript" />
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
+  <!-- Experience -->
   <section class="experience-section section-container">
     <div class="experience-box">
       <h2 class="section-title">Experience</h2>
@@ -236,6 +230,7 @@
     </div>
   </section>
 
+  <!-- Contact -->
   <section class="contact-section">
     <div class="contact-container">
       <p class="contact-title">Let’s chat! I’m ready to work on exciting projects.</p>
