Refine proficiency and skills sections to match the design - Updated proficiency section layout, labels, and progress bars for accurate alignment and spacing - Adjusted skills section to use pill-shaped tags with improved wrapping and spacing - Matched font sizes, colors, and structure to the provided

--- a/index.html
+++ b/index.html
@@ -24,32 +24,42 @@
 
   <!-- Proficiency -->
   <section class="proficiency-box section-container">
-    <div class="proficiency-label">Beginner</div>
-
-    <div class="proficiency-label">JavaScript</div>
-    <div class="proficiency-bar"><span style="width: 90%;"></span></div>
-
-    <div class="proficiency-label">React</div>
-    <div class="proficiency-bar"><span style="width: 75%;"></span></div>
-
-    <div class="proficiency-label">Node.js</div>
-    <div class="proficiency-bar"><span style="width: 60%;"></span></div>
-
-    <div class="proficiency-label">HTML + CSS</div>
-    <div class="proficiency-bar"><span style="width: 80%;"></span></div>
+    <h2 class="section-title">Proficiency</h2>
+    <div class="proficiency-levels">
+      <span>Beginner</span>
+    </div>
+    <div class="proficiency-row">
+      <span class="proficiency-label">JavaScript</span>
+      <div class="proficiency-bar"><span style="width: 20%;"></span></div>
+    </div>
+    <div class="proficiency-row">
+      <span class="proficiency-label">React</span>
+      <div class="proficiency-bar"><span style="width: 25%;"></span></div>
+    </div>
+    <div class="proficiency-row">
+      <span class="proficiency-label">Node.js</span>
+      <div class="proficiency-bar"><span style="width: 20%;"></span></div>
+    </div>
+    <div class="proficiency-row">
+      <span class="proficiency-label">HTML + CSS</span>
+      <div class="proficiency-bar"><span style="width: 70%;"></span></div>
+    </div>
   </section>
 
   <!-- Skills -->
   <section class="skills-box section-container">
-    <span class="skill-tag">Software Development</span>
-    <span class="skill-tag">Agile</span>
-    <span class="skill-tag">UI Design</span>
-    <span class="skill-tag">Problem Solving</span>
-    <span class="skill-tag">Git And Version Control</span>
-    <span class="skill-tag">Web Development</span>
-    <span class="skill-tag">Team Collaboration</span>
-    <span class="skill-tag">Functional Programming</span>
-    <span class="skill-tag">RESTful APIs</span>
+    <h2 class="section-title">Skills</h2>
+    <div class="skills-tags">
+      <span class="skill-tag">Software Development</span>
+      <span class="skill-tag">Agile</span>
+      <span class="skill-tag">Ui Design</span>
+      <span class="skill-tag">Problem Solving</span>
+      <span class="skill-tag">Git And Version Control</span>
+      <span class="skill-tag">Web Development</span>
+      <span class="skill-tag">Team Collaboration</span>
+      <span class="skill-tag">Functional Programming</span>
+      <span class="skill-tag">RESTful APIs</span>
+    </div>
   </section>
 
   <!-- Projects -->
