Refactor education section for cleaner, tighter bullet list layout
- Changed education list items from <dt> to <li> for proper bullet formatting
- Updated CSS to reduce spacing and align text closer to bullets for a paragraph-like appearance
- Improved overall readability and compactness of the education section

--- a/index.html
+++ b/index.html
@@ -111,48 +111,54 @@
 
   <!-- Education -->
   <section class="education-section section-container">
-    <div class="education-box">
-      <h2 class="section-title">Education</h2>
-
-      <div class="education-card highlight">
-        <div class="education-header">
-          <span class="education-institution">CodeSpace Academy | Full-time</span>
-          <span class="most-recent-badge">most recent</span>
+    <h2 class="section-title">Education</h2>
+    <div class="education-card highlight">
+      <div class="education-row">
+        <span class="education-date">Aug. 2025 – Mar. 2026</span>
+        <span class="most-recent-badge">most recent</span>
+      </div>
+      <div class="education-flex">
+        <div class="education-main">
+          <div class="education-title">CodeSpace Academy</div>
+          <div class="education-subtitle">Software Development | Full-time</div>
         </div>
-        <div class="education-details">
-          <span>Aug. 2023 - Mar. 2024</span> — <b>Software Development</b>
-        </div>
-        <ul class="education-details">
-          <li>Focused on front-end and JavaScript, building interactive, dynamic web applications</li>
-          <li>Developed proficiency in Git and GitHub for version control practices, refining collaborative workflows</li>
-          <li>Gained hands-on experience with building responsive web interfaces and UI/UX development skills</li>
+        <ul class="education-list">
+          <dt>• Built React and JavaScript web apps</dt>
+          <dt>• Collaborated on real-world projects</dt>
+          <dt>• Hands-on experience with modern tools</dt>
         </ul>
       </div>
+    </div>
 
-      <div class="education-card">
-        <div class="education-header">
-          <span class="education-institution">CPUT</span>
+    <div class="education-card">
+      <div class="education-row">
+        <span class="education-date">Feb. 2019 – Dec. 2022</span>
+      </div>
+      <div class="education-flex">
+        <div class="education-main">
+          <div class="education-title">CPUT</div>
+          <div class="education-subtitle">Mechanical Engineering | Full-time</div>
         </div>
-        <div class="education-details">
-          <span>Feb. 2019 - Dec. 2022</span> — <b>Electronic Engineering | Full-time</b>
-        </div>
-        <ul class="education-details">
-          <li>Gained a strong foundation in electronic circuits and digital design principles</li>
-          <li>Engaged in hands-on circuit and project development, from concept to functional prototypes</li>
-          <li>Collaborated with cross-functional teams to achieve project goals in a fast-paced environment</li>
+        <ul class="education-list">
+          <dt>• Strong foundation in mechanical systems</dt>
+          <dt>• Led projects from concept to prototype</dt>
+          <dt>• Worked in cross-functional teams</dt>
         </ul>
       </div>
+    </div>
 
-      <div class="education-card">
-        <div class="education-header">
-          <span class="education-institution">Hudson Park High</span>
+    <div class="education-card">
+      <div class="education-row">
+        <span class="education-date">Jan. 2014 – Dec. 2018</span>
+      </div>
+      <div class="education-flex">
+        <div class="education-main">
+          <div class="education-title">Hudson Park High</div>
+          <div class="education-subtitle">Matric | NQF Level 4</div>
         </div>
-        <div class="education-details">
-          <span>Jan. 2018 - Dec. 2019</span> — <b>High School Diploma</b>
-        </div>
-        <ul class="education-details">
-          <li>Built core academic skills and developed a strong passion for problem-solving</li>
-          <li>Participated in various extra-curricular projects that honed creative and analytical thinking</li>
+        <ul class="education-list">
+          <dt>• Developed core academic skills</dt>
+          <dt>• Participated in creative and analytical projects</dt>
         </ul>
       </div>
     </div>
