Refactor experience section to match education layout and improve consistency
- Updated experience section HTML to use two-column flex layout with job details and bullet points
- Applied highlight styling and "most recent" badge to latest job card
- Adjusted CSS for job cards to match education section spacing, fonts, and responsive behavior
- Improved overall visual consistency and readability across sections

--- a/index.html
+++ b/index.html
@@ -199,17 +199,17 @@
 
   <!-- Experience -->
   <section class="experience-section section-container">
-    <div class="experience-box">
-      <h2 class="section-title">Experience</h2>
-
-      <div class="job-card job-1">
-        <div class="job-row">
-          <div class="job-meta">
-            <span class="job-date">Aug. 2024 - July. 2025</span>
-            <div class="job-role">Bookstore Clerk</div>
-            <div class="job-company">Readers’ Haven | Full-time</div>
-          </div>
-          <span class="most-recent-badge">most recent</span>
+    <h2 class="section-title">Experience</h2>
+    
+    <div class="job-card highlight">
+      <div class="job-row">
+        <span class="job-date">Aug. 2024 – July. 2025</span>
+        <span class="most-recent-badge">most recent</span>
+      </div>
+      <div class="job-flex">
+        <div class="job-main">
+          <div class="job-role">Bookstore Clerk</div>
+          <div class="job-company">Readers’ Haven | Full-time</div>
         </div>
         <ul class="job-points white">
           <li>Organized and shelved new arrivals, ensuring a clean and enticing store layout</li>
@@ -217,10 +217,14 @@
           <li>Handled point-of-sale transactions and updated inventory records</li>
         </ul>
       </div>
+    </div>
 
-      <div class="job-card job-2">
-        <div class="job-meta">
-          <span class="job-date dark">Jan. 2023 - Jul. 2024</span>
+    <div class="job-card">
+      <div class="job-row">
+        <span class="job-date dark">Jan. 2023 – Jul. 2024</span>
+      </div>
+      <div class="job-flex">
+        <div class="job-main">
           <div class="job-role dark">Sales | Cell Contracts</div>
           <div class="job-company dark">Tech Solutions | Full-time</div>
         </div>
@@ -230,10 +234,14 @@
           <li>Collaborated with kitchen staff to ensure seamless service and timely meal delivery</li>
         </ul>
       </div>
+    </div>
 
-      <div class="job-card job-3">
-        <div class="job-meta">
-          <span class="job-date dark">Feb. 2021 - Dec. 2022</span>
+    <div class="job-card">
+      <div class="job-row">
+        <span class="job-date dark">Feb. 2021 – Dec. 2022</span>
+      </div>
+      <div class="job-flex">
+        <div class="job-main">
           <div class="job-role dark">Waiter</div>
           <div class="job-company dark">The Bistro House | Part-time</div>
         </div>
