Update skills section styling for improved tag appearance and spacing
- Refined skills tag CSS for pill shape, lighter background, and better wrapping
- Ensured skills section matches design reference for layout and readability

--- a/index.html
+++ b/index.html
@@ -255,13 +255,13 @@
   </section>
 
   <!-- Contact -->
-  <section class="contact-section">
+  <section class="contact-section section-container">
     <div class="contact-container">
       <p class="contact-title">Let’s chat! I’m ready to work on exciting projects.</p>
       <div class="contact-details">
-        <span>philliprossouw9609@gmail.com</span>
+        <span>namesurname@email.com</span>
         <span class="divider">|</span>
-        <span>084 242 2824</span>
+        <span>072 345 6789</span>
       </div>
     </div>
   </section>
