--- a/index.html
+++ b/index.html
@@ -166,31 +166,35 @@
 
   <!-- Tools -->
   <section class="tools-section section-container">
+    <!-- Credit: Tool icons sourced from https://www.svgrepo.com/vectors/ -->
     <div class="tools-box">
       <h2 class="section-title">Tools</h2>
       <div class="tools-grid">
         <div class="tool-card">
           <div class="tool-tag">Design</div>
           <div class="tool-icons">
-            <img src="icons/figma.png" alt="Figma" />
-            <img src="icons/canva.png" alt="Canva" />
-            <img src="icons/photoshop.png" alt="Photoshop" />
+            <img src="tools/canva.png" alt="Canva" />
+            <img src="tools/figma.png" alt="Figma" />
+            <img src="tools/ms.png" alt="Microsoft" />
           </div>
         </div>
         <div class="tool-card">
           <div class="tool-tag">Software</div>
           <div class="tool-icons">
-            <img src="icons/npm.png" alt="npm" />
-            <img src="icons/vscode.png" alt="VS Code" />
-            <img src="icons/github.png" alt="GitHub" />
+            <img src="tools/npm.png" alt="npm" />
+            <img src="tools/vsc.png" alt="VS Code" />
+            <img src="tools/github.png" alt="GitHub" />
+            <img src="tools/cpanel.png" alt="cPanel" />
           </div>
         </div>
         <div class="tool-card">
           <div class="tool-tag">Languages</div>
           <div class="tool-icons">
-            <img src="icons/html.png" alt="HTML" />
-            <img src="icons/css.png" alt="CSS" />
-            <img src="icons/js.png" alt="JavaScript" />
+            <img src="tools/html.png" alt="HTML" />
+            <img src="tools/css.png" alt="CSS" />
+            <img src="tools/JS.png" alt="JavaScript" />
+            <img src="tools/njs.png" alt="Node.js" />
+            <img src="tools/tailwind.png" alt="Tailwind" />
           </div>
         </div>
       </div>
