Fix project heart visibility on mobile and made first project heart red

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="project-card project-card--highlight">
           <div class="project-top">
             <span>2025</span>
-            <span class="accent-color">&#10084;</span>
+            <span class="accent-color project-heart">&#10084;</span> <!-- Add project-heart class -->
           </div>
           <strong class="project-title">Portfolio Website</strong>
           <div class="project-description"><b>Brief:</b> Developed a personal portfolio website to showcase projects and skills.</div>
@@ -78,7 +78,7 @@
         <div class="project-card">
           <div class="project-top">
             <span>2024</span>
-            <span class="accent-color">&#10084;</span>
+            <span class="accent-color">&#10084;</span> <!-- No project-heart class -->
           </div>
           <strong class="project-title">Agile Board</strong>
           <div class="project-description"><b>Brief:</b> Created a task management tool for organizing and tracking tasks.</div>
