deleted:  redundant  htmlOG.html 	deleted:  redundant  stylesOG.css     - Increased size of proficiency section on desktop for better visibility and balance. - Enlarged proficiency bar heights, label font sizes, and section padding for a more prominent and readable appearance. - Improved overall alignment and spacing to ensure the proficiency section fills the card more

--- a/index.html
+++ b/index.html
@@ -52,10 +52,13 @@
         <span class="skill-tag">Software Development</span>
         <span class="skill-tag">Agile</span>
         <span class="skill-tag">Ui Design</span>
+        <br class="skills-break">
         <span class="skill-tag">Problem Solving</span>
         <span class="skill-tag">Git And Version Control</span>
+        <br class="skills-break">
         <span class="skill-tag">Web Development</span>
         <span class="skill-tag">Team Collaboration</span>
+        <br class="skills-break">
         <span class="skill-tag">Functional Programming</span>
         <span class="skill-tag">RESTful APIs</span>
       </div>
