Added .desktop-only class to LinkedIn and GitHub links and dividers. Hid .desktop-only elements on screens below 1200px. Enhanced desktop contact section layout and styling. Maintained a clean, uncluttered mobile contact display.

--- a/index.html
+++ b/index.html
@@ -263,6 +263,10 @@
           <span>namesurname@email.com</span>
           <span class="divider">|</span>
           <span>072 345 6789</span>
+          <span class="divider desktop-only">|</span>
+          <a href="https://linkedin.com/in/yourprofile" target="_blank" class="desktop-only">LinkedIn Link</a>
+          <span class="divider desktop-only">|</span>
+          <a href="https://github.com/yourprofile" target="_blank" class="desktop-only">GitHub Link</a>
         </div>
       </div>
     </section>
