Updated the readme file to include the presentation script

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
       <div class="profile-text">
         <div class="name">Phillip Botha</div>
         <div class="description">
-          I am a passionate and dedicated software developer with a strong foundation in JavaScript and React.
-        </div>
+          💡 I'm a passionate junior software developer with a hunger for learning, building cool things, and collaborating with awesome people.        </div>
       </div>
     </section>
 
