--- a/index.html
+++ b/index.html
@@ -263,9 +263,9 @@
           <span class="divider">|</span>
           <span>072 345 6789</span>
           <span class="divider desktop-only">|</span>
-          <a href="https://linkedin.com/in/yourprofile" target="_blank" class="desktop-only">LinkedIn Link</a>
+          <a href="https://www.linkedin.com/in/phillip-rossouw-botha/" target="_blank" class="desktop-only">LinkedIn Link</a>
           <span class="divider desktop-only">|</span>
-          <a href="https://github.com/yourprofile" target="_blank" class="desktop-only">GitHub Link</a>
+          <a href="https://github.com/DrRoss23" target="_blank" class="desktop-only">GitHub Link</a>
         </div>
       </div>
     </section>
