--- a/index.html
+++ b/index.html
@@ -259,9 +259,9 @@
       <div class="contact-container">
         <p class="contact-title">Let’s chat! I’m ready to work on exciting projects.</p>
         <div class="contact-details">
-          <span>namesurname@email.com</span>
+          <span>Phillprossouw9609@gmail.com</span>
           <span class="divider">|</span>
-          <span>072 345 6789</span>
+          <span>0842422824</span>
           <span class="divider desktop-only">|</span>
           <a href="https://www.linkedin.com/in/phillip-rossouw-botha/" target="_blank" class="desktop-only">LinkedIn Link</a>
           <span class="divider desktop-only">|</span>
